@@ -30,6 +30,7 @@ K  6072	copying a DataHandler from a parsed message to a new message fails
 K  6102	MimeMessage does not unfold address headers before parsing them
 K  6108	When using XGWTRUSTEDAPP mechanism, LOGIN should not be issued if no
 	authzid is specified
+K  6125	support empty IMAP ENVELOPE address list instead of NIL
 
 
 		  CHANGES IN THE 1.5.0 RELEASE
